feat: user-language custom tag labels, black/white styling, dead code cleanup
resolveOrCreatePersonalLabel now takes the request's LanguageCode
instead of hardcoding en, sets one localizedName entry for the typed
tag, slugifies it via WebHelper.generateSlug for the identifier, and
forces personal label color to black/white instead of a random
contrast pair.

Removes two unreferenced classes (DefaultSoundFragmentProvisionService,
BrandScriptUpdateService) and a handful of unused service methods.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SuXyxua6KaTknaS66AdVxd